CLang.java
/* CLang.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. CLang.java */
public class CLang/*@bgen(jjtree)*/implements CLangTreeConstants, CLangConstants {/*@bgen(jjtree)*/
  protected static JJTCLangState jjtree = new JJTCLangState();

  static final public void Start() throws ParseException {/*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TYPE:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        sourceCodeDef();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void sourceCodeDef() throws ParseException {/*@bgen(jjtree) sourceCodeDef */
  ASTsourceCodeDef jjtn000 = new ASTsourceCodeDef(JJTSOURCECODEDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      if (jj_2_1(2147483647)) {
        varDefineDef();
        jj_consume_token(SEMICOLON);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TYPE:{
          functionDef();
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void paramListDef() throws ParseException {/*@bgen(jjtree) paramListDef */
  ASTparamListDef jjtn000 = new ASTparamListDef(JJTPARAMLISTDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      paramDef();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(COMMA);
        paramDef();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void paramDef() throws ParseException {/*@bgen(jjtree) paramDef */
  ASTparamDef jjtn000 = new ASTparamDef(JJTPARAMDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(TYPE);
      jj_consume_token(ID);
    } finally {
if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
         jjtn000.jjtSetLastToken(getToken(0));
       }
    }
}

  static final public void functionDef() throws ParseException {/*@bgen(jjtree) functionDef */
  ASTfunctionDef jjtn000 = new ASTfunctionDef(JJTFUNCTIONDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(TYPE);
      jj_consume_token(ID);
      jj_consume_token(LRBRACKET);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TYPE:{
        paramListDef();
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(RRBRACKET);
      StatementBlockDef();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void varAssignDefInInit() throws ParseException {/*@bgen(jjtree) varAssignDefInInit */
  ASTvarAssignDefInInit jjtn000 = new ASTvarAssignDefInInit(JJTVARASSIGNDEFININIT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(ASSIGN);
      expressionDef();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void varAssignDef() throws ParseException {/*@bgen(jjtree) varAssignDef */
  ASTvarAssignDef jjtn000 = new ASTvarAssignDef(JJTVARASSIGNDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(ID);
      jj_consume_token(ASSIGN);
      expressionDef();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void varDefineDef() throws ParseException {/*@bgen(jjtree) varDefineDef */
  ASTvarDefineDef jjtn000 = new ASTvarDefineDef(JJTVARDEFINEDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(TYPE);
      jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ASSIGN:{
        varAssignDefInInit();
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void StatementBlockDef() throws ParseException {/*@bgen(jjtree) StatementBlockDef */
  ASTStatementBlockDef jjtn000 = new ASTStatementBlockDef(JJTSTATEMENTBLOCKDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(LCBRACKET);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TYPE:
        case WHILE:
        case RETURN:
        case FOR:
        case IF:
        case ID:
        case NUMBER:
        case CHAR_VALUE:
        case LRBRACKET:
        case NOT:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_3;
        }
        StatementDef();
      }
      jj_consume_token(RCBRACKET);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void StatementDef() throws ParseException {/*@bgen(jjtree) StatementDef */
  ASTStatementDef jjtn000 = new ASTStatementDef(JJTSTATEMENTDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TYPE:{
        varDefineDef();
        jj_consume_token(SEMICOLON);
        break;
        }
      case ID:
      case NUMBER:
      case CHAR_VALUE:
      case LRBRACKET:
      case NOT:{
        expressionDef();
        jj_consume_token(SEMICOLON);
        break;
        }
      case IF:{
        IfStatementDef();
        break;
        }
      case RETURN:{
        ReturnStatementDef();
        break;
        }
      case FOR:{
        ForStatementDef();
        break;
        }
      case WHILE:{
        WhileStatementDef();
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void ReturnStatementDef() throws ParseException {/*@bgen(jjtree) ReturnStatementDef */
  ASTReturnStatementDef jjtn000 = new ASTReturnStatementDef(JJTRETURNSTATEMENTDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case RETURN:{
        jj_consume_token(RETURN);
        jj_consume_token(SEMICOLON);
        break;
        }
      case TYPE:
      case ID:
      case NUMBER:
      case CHAR_VALUE:
      case LRBRACKET:
      case NOT:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ID:
        case NUMBER:
        case CHAR_VALUE:
        case LRBRACKET:
        case NOT:{
          StatementExpressionDefRbracket();
          break;
          }
        case TYPE:{
          functionDef();
          label_4:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case ID:
            case NUMBER:
            case CHAR_VALUE:
            case LRBRACKET:
            case NOT:{
              ;
              break;
              }
            default:
              jj_la1[7] = jj_gen;
              break label_4;
            }
            binaryBoolExpressionCompareDef();
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case ID:
            case NUMBER:
            case CHAR_VALUE:
            case LRBRACKET:
            case NOT:{
              StatementExpressionDefRbracket();
              break;
              }
            case TYPE:{
              functionDef();
              break;
              }
            default:
              jj_la1[8] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
          jj_consume_token(SEMICOLON);
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void WhileStatementDef() throws ParseException {/*@bgen(jjtree) WhileStatementDef */
  ASTWhileStatementDef jjtn000 = new ASTWhileStatementDef(JJTWHILESTATEMENTDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(WHILE);
      jj_consume_token(LRBRACKET);
      StatementExpressionDefRbracket();
      jj_consume_token(RRBRACKET);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LCBRACKET:{
        StatementBlockDef();
        break;
        }
      case TYPE:
      case WHILE:
      case RETURN:
      case FOR:
      case IF:
      case ID:
      case NUMBER:
      case CHAR_VALUE:
      case LRBRACKET:
      case NOT:{
        StatementDef();
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void ForStatementDef() throws ParseException {/*@bgen(jjtree) ForStatementDef */
  ASTForStatementDef jjtn000 = new ASTForStatementDef(JJTFORSTATEMENTDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FOR:{
        jj_consume_token(FOR);
        jj_consume_token(LRBRACKET);
        break;
        }
      case LRBRACKET:{
        jj_consume_token(LRBRACKET);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TYPE:{
          varDefineDef();
          break;
          }
        case ID:{
          varAssignDef();
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[13] = jj_gen;
            break label_5;
          }
          jj_consume_token(COMMA);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case TYPE:{
            varDefineDef();
            break;
            }
          case ID:{
            varAssignDef();
            break;
            }
          default:
            jj_la1[14] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        jj_consume_token(SEMICOLON);
        boolExpressionDef();
        jj_consume_token(SEMICOLON);
        StatementExpressionDefRbracket();
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[15] = jj_gen;
            break label_6;
          }
          jj_consume_token(COMMA);
          StatementExpressionDefRbracket();
        }
        jj_consume_token(RRBRACKET);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LCBRACKET:{
          StatementBlockDef();
          break;
          }
        case TYPE:
        case WHILE:
        case RETURN:
        case FOR:
        case IF:
        case ID:
        case NUMBER:
        case CHAR_VALUE:
        case LRBRACKET:
        case NOT:{
          StatementDef();
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void IfStatementDef() throws ParseException {/*@bgen(jjtree) IfStatementDef */
  ASTIfStatementDef jjtn000 = new ASTIfStatementDef(JJTIFSTATEMENTDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(IF);
      jj_consume_token(LRBRACKET);
      StatementExpressionDefRbracket();
      jj_consume_token(RRBRACKET);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LCBRACKET:{
        StatementBlockDef();
        break;
        }
      case TYPE:
      case WHILE:
      case RETURN:
      case FOR:
      case IF:
      case ID:
      case NUMBER:
      case CHAR_VALUE:
      case LRBRACKET:
      case NOT:{
        StatementDef();
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void expressionDef() throws ParseException {/*@bgen(jjtree) expressionDef */
  ASTexpressionDef jjtn000 = new ASTexpressionDef(JJTEXPRESSIONDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      if (jj_2_2(2147483647)) {
        assignExpressionDef();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ID:
        case NUMBER:
        case CHAR_VALUE:
        case LRBRACKET:
        case NOT:{
          boolExpressionDef();
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void StatementExpressionDefRbracket() throws ParseException {/*@bgen(jjtree) StatementExpressionDefRbracket */
  ASTStatementExpressionDefRbracket jjtn000 = new ASTStatementExpressionDefRbracket(JJTSTATEMENTEXPRESSIONDEFRBRACKET);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LRBRACKET:{
        jj_consume_token(LRBRACKET);
        expressionDef();
        jj_consume_token(RRBRACKET);
        break;
        }
      case ID:
      case NUMBER:
      case CHAR_VALUE:
      case NOT:{
        expressionDef();
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void assignExpressionDef() throws ParseException {/*@bgen(jjtree) assignExpressionDef */
  ASTassignExpressionDef jjtn000 = new ASTassignExpressionDef(JJTASSIGNEXPRESSIONDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(ID);
      jj_consume_token(ASSIGN);
      expressionDef();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void boolExpressionDef() throws ParseException {/*@bgen(jjtree) boolExpressionDef */
  ASTboolExpressionDef jjtn000 = new ASTboolExpressionDef(JJTBOOLEXPRESSIONDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      binaryBoolExpressionOrDef();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}

  static final public void binaryBoolExpressionOrDef() throws ParseException {/*@bgen(jjtree) binaryBoolExpressionOrDef */
  ASTbinaryBoolExpressionOrDef jjtn000 = new ASTbinaryBoolExpressionOrDef(JJTBINARYBOOLEXPRESSIONORDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      binaryBoolExpressionAndDef();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        jj_consume_token(OR);
        binaryBoolExpressionOrDef();
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
}
